[gd_scene load_steps=3 format=3 uid="uid://vv2cjmd6rhsx"]

[ext_resource type="Script" path="res://scenes/UI/audio_slider_settings.gd" id="1_dr6i8"]
[ext_resource type="Theme" uid="uid://d2ftvsv4o2shs" path="res://setttings_theme.tres" id="2_e3iu2"]

[node name="HBox" type="HBoxContainer"]
theme = ExtResource("2_e3iu2")
script = ExtResource("1_dr6i8")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_e3iu2")
text = "Text:"
vertical_alignment = 1

[node name="Slider" type="HSlider" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="Text value" type="TextEdit" parent="."]
custom_minimum_size = Vector2(52, 0)
layout_mode = 2
focus_next = NodePath("../../Sounds/Sounds slider")
theme = ExtResource("2_e3iu2")
text = "100"
context_menu_enabled = false
shortcut_keys_enabled = false
drag_and_drop_selection_enabled = false
scroll_fit_content_height = true
caret_blink = true
caret_multiple = false

[connection signal="drag_ended" from="Slider" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Slider" to="." method="_on_slider_value_changed"]
[connection signal="focus_exited" from="Text value" to="." method="update_sliders_from_text"]
